# LA-Planner

./: README.md
perception_aware_planner/active_perception/: CMakeLists.txt
perception_aware_planner/active_perception/include/active_perception/: frontier_data.h  frontier_finder.h  graph_search.h  localization_aware_graph_search.h
perception_aware_planner/active_perception/src/: frontier_finder.cpp  localization_aware_graph_search.cpp
perception_aware_planner/exploration_manager/: CMakeLists.txt  package.xml
perception_aware_planner/exploration_manager/config/ft_param/: map1.yaml  map2.yaml  map3.yaml
perception_aware_planner/exploration_manager/include/exploration_manager/: expl_data.h  failure_detector.h  perception_aware_exploration_fsm.h  perception_aware_exploration_manager.h
perception_aware_planner/exploration_manager/launch/: run_map1.launch  run_map2.launch  run_map3.launch
perception_aware_planner/exploration_manager/launch/include/: algorithm.xml  exploration.launch  exploration_1.launch  rviz.launch  simulator.xml
perception_aware_planner/exploration_manager/scripts/: poscmd_to_twist.py
perception_aware_planner/exploration_manager/src/: exploration_node.cpp  failure_detector.cpp  perception_aware_exploration_fsm.cpp  perception_aware_exploration_manager.cpp
perception_aware_planner/local_plan_manager/: CMakeLists.txt  package.xml
perception_aware_planner/local_plan_manager/config/: traj.rviz
perception_aware_planner/local_plan_manager/include/local_plan_manager/: perception_aware_planner_manager.h  plan_container.hpp  yaw_initial_planner.h
perception_aware_planner/local_plan_manager/src/: perception_aware_planner_manager.cpp  traj_server.cpp  yaw_initial_planner.cpp
perception_aware_planner/path_searching/: CMakeLists.txt
perception_aware_planner/path_searching/include/path_searching/: astar2.h  kinodynamic_astar.h
perception_aware_planner/path_searching/src/: astar2.cpp  kinodynamic_astar.cpp
perception_aware_planner/plan_env/: CMakeLists.txt  package.xml
perception_aware_planner/plan_env/include/plan_env/: edt_environment.h  feature_map.h  map_ros.h  obj_predictor.h  raycast.h  sdf_map.h
perception_aware_planner/plan_env/src/: edt_environment.cpp  feature_map.cpp  map_ros.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
perception_aware_planner/traj_opt/: CMakeLists.txt  package.xml
perception_aware_planner/traj_opt/include/traj_opt/: bspline_optimizer.h  lbfgs.hpp  yaw_traj_opt.h
perception_aware_planner/traj_opt/src/: bspline_optimizer.cpp  yaw_traj_opt.cpp
perception_aware_planner/traj_utils/: CMakeLists.txt
perception_aware_planner/traj_utils/include/gcopter/: firi.hpp  gcopter.hpp  geo_utils.hpp  minco.hpp  quickhull.hpp  sdlp.hpp  sfc_gen.hpp  trajectory.hpp  voxel_map.hpp
perception_aware_planner/traj_utils/include/traj_utils/: non_uniform_bspline.h  planning_visualization.h  polynomial_traj.h
perception_aware_planner/traj_utils/msg/: MixTraj.msg  PolyTraj.msg
perception_aware_planner/traj_utils/src/: non_uniform_bspline.cpp  planning_visualization.cpp  polynomial_traj.cpp  pub_fov_marker_tf.cpp
perception_aware_planner/utils/: CMakeLists.txt  package.xml
perception_aware_planner/utils/config/: cam.yaml
perception_aware_planner/utils/include/utils/: utils.h
perception_aware_planner/utils/src/: utils.cpp
uav_simulator/map_publisher/: CMakeLists.txt
uav_simulator/map_publisher/data/map2/: feature.ply
uav_simulator/map_publisher/data/map3/: feature.ply
uav_simulator/map_publisher/launch/: map_publisher.launch
uav_simulator/map_publisher/src/: map_publisher.cpp
